--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Image and text -->
 <nav class="navbar sticky-top navbar-light bg-light">
     <a class="navbar-brand" href="#">
-      <img src="https://static.wikia.nocookie.net/logopedia/images/1/1f/Los_angeles_dodgers_logo_primary_1972.png/revision/latest?cb=20210706181500" width="160" height="120" class="d-inline-block align-top" alt="">
+      <img src="https://www.freepnglogos.com/uploads/dodgers-logo-png/dodgers-should-gun-buyers-have-pass-psychiatric-examinations-6.png" width="200" height="120" class="d-inline-block align-top" alt="">
       <strong>Los Angeles Dodgers</strong> 
     </a>
         <nav class="nav nav-pills nav-justified">
@@ -27,13 +27,7 @@
         <div class="embed-responsive embed-responsive-16by9">
             <iframe width="200" height="100" src="https://www.youtube.com/embed/WIZqA9_fsfA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
-
-    </h1>
-    <h2>
-        <div class="image-container" Clayton Kershaw
-            <img src="https://i.pinimg.com/736x/59/dd/34/59dd34746c4ec0fa4fa05b7eb096e21e--clayton-kershaw-glendale-arizona.jpg" alt="..." class="img-thumbnail">
-    
-    </h2>
+         </h1>
     <h3 class="blog"><strong class="opening-line">The Los Angeles Dodgers</strong>
         <p>are an American professional baseball team based in Los Angeles. The Dodgers compete in Major League Baseball (MLB) as a member club of the National League (NL) West division. Established in 1883 in the city of Brooklyn, which later became a borough of New York City, the team joined the NL in 1890 as the Brooklyn Bridegrooms and assumed several different monikers thereafter before finally settling on the name Dodgers in 1932. From the 1940s through the mid-1950s, the Dodgers developed a fierce cross-town rivalry with the New York Yankees as the two clubs faced each other in the World Series seven times, with the Dodgers losing the first five matchups before defeating them to win the franchise's first title in 1955. It was also during this period that the Dodgers made history by breaking the baseball color line in 1947 with the debut of Jackie Robinson, the first African-American to play in the Major Leagues since 1884. Another major milestone was reached in 1956 when Don Newcombe became the first player ever to win both the Cy Young Award and the NL MVP in the same season.
 
